<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_personal_account">

    <fragment
        android:id="@+id/navigation_personal_account"
        android:name="com.example.coursework.ui.personal_account.PersonalAccountFragment"
        android:label="@string/title_personal_account"
        tools:layout="@layout/fragment_personal_account" />

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.example.coursework.ui.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/navigation_schedule"
        android:name="com.example.coursework.ui.schedule.ScheduleFragment"
        android:label="@string/title_schedule"
        tools:layout="@layout/fragment_schedule" />
</navigation>